--- a/petshop/templates/editpet.html
+++ b/petshop/templates/editpet.html
@@ -24,7 +24,9 @@
 
   <div class="mb-3">
     <div class="form-check">
-      {# TODO  Add sold checkbox here #}
+      {%if not sold%}
+      <input type="checkbox" class="form-check-input" id="sold" name="sold">
+      {%endif%}
       <label class="form-check-label" for="sold" > Sold </label>
     </div>
   </div>
